src/test/deca/syntax/invalid/lex_floatdecmax_invalid.deca
// Test limite flottant debordement
// un float par ligne
3.40282346000001E38
